kubernetes-monitoring/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-monitoring-service
  namespace: homework
spec:
  selector:
    app.kubernetes.io/name: kubernetes-monitoring
    app.kubernetes.io/instance: kubernetes-monitoring-instance
  ports:
    - name: http-k8s-mn-svc
      protocol: TCP
      port: 80
      targetPort: http-k8s-mn
    - name: nginx-metrics-svc
      protocol: TCP
      port: 9252
      targetPort: nginx-metrics
  type: ClusterIP
