kubernetes-monitoring/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-monitoring-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-monitoring-service
            port:
              name: http-k8s-mn-svc
